
BUG FIXES and IMPROVEMENTS

- Use correct license in OpenStreetMap attribution. (#811)

- Update jQuery to utilize `{jquerylib}`. (#817)

- Use `xfun::base64_uri()` for base64 encoding instead of **markdown** and **base64enc**. (#823)

- Remove dependencies on rgdal and rgeos. (#837)

- Respect option scrollWheelZoom=FALSE. (#827)

## leaflet 2.1.2

BUG FIXES and IMPROVEMENTS

- Removed S3 warnings found on R devel (#848)

## leaflet 2.1.1

BUG FIXES and IMPROVEMENTS

- The default marker icon for `addMarkers` no longer worked, due to the CDN we were relying on apparently being retired. Fixed by pointing to a new CDN. (#782)

- New behavior from tile.openstreetmap.org caused `addTiles` default tileset to break when viewed under non-https protocol on recent versions of Chrome. Fixed by always using the https protocol to connect to openstreetmap. (#786)

## leaflet 2.1.0

BUG FIXES and IMPROVEMENTS

- Enable JS function literals (wrapped in `htmlwidgets::JS()`) to be included in arguments to methods invoked on `leafletProxy` objects. (JS function literals could already be included with methods invoked on `leaflet` objects, so this change just brings `leafletProxy` to parity.) (#420)

- Add missing CSS rule to show `<img>` in right-pane and left-pane (rstudio/rmarkdown/issues#1949, #770)

- Allow for _hidden_ but not suspended leaflet maps to queue calls (such as add raster images) until they are rendered. If a new leaflet map is created, all pending calls are removed. (#771)

## leaflet 2.0.4.1

FEATURES

- Updated proj4.js to 2.6.2

BUG FIXES and IMPROVEMENTS

- Minor tweaks to example data and tests, required to stay on CRAN

- Fixes broken URL (#742) and updated examples to run from system files (#576) including updated .Rmd and .html docs.

## leaflet 2.0.3

BREAKING CHANGES

- `data("providers")` and `data("providers.details")` no longer exist. Please use `leaflet::providers` and `leaflet::providers.details`. (#636)

BUG FIXES and IMPROVEMENTS
